[tool.poetry]
name = "Flash_loan_arbritage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "Flash_loan_arbritage"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-ape = "*"
ape-alchemy = "^0.6.2"
ape-solidity= "^0.6.7"
ape-foundry = "^0.6.14"
ape-etherscan = "*"
# plugin = "*" # get the latest one
uniswap-python = "^0.7.0"
colorama = "^0.4.6"
tqdm = "^4.66.1"
loguru = "^0.7.0"
#multicall = "*" # break other web libraries
pathos = "^0.3.1"
ethpm-types = "^0.5.4"


[tool.ape.plugins]
ape-alchemy = "*"
ape-solidity = "*"
ape-foundry = "*"
ape-etherscan = "*"

[tool.ape.network]
ecosystem = "ethereum"
default_network = "mainnet-fork"
default_provider = "foundry"

[tool.ape.tests]
mnemonic = "test test test test test test test test test test test junk"
number_of_test_accounts = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
